@@ -1,5 +1,11 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2014-01-06 Matthias Scholz <ms@jammerhund.de>
+  * Enhancement of the AbstractCursorTool for XOR painting Image's as visual
+    indicator too. One usecase is the SuperZoomPanTool. If you use the wheel in
+    this tool for zooming you get more information as it was possible with a
+    simple shape.
+
 2013-12-24 ede "happy holidays"
   * update jts to 1.14 snapshot supposedly containing 
     spatiallite multigeometry fix
